--- a/docker/nginx/conf.d/app-prod.conf
+++ b/docker/nginx/conf.d/app-prod.conf
@@ -1,14 +1,14 @@
 server {
     listen 80;
     server_name _;
-    
+
     # Redirect HTTP to HTTPS
     return 301 https://$host$request_uri;
 }
 
 server {
     listen 443 ssl http2;
-    server_name _;
+    server_name patricia-si-mihai.online;
     root /var/www/html/public;
     index index.php index.html;
 
